# website

./: .gitattributes  .gitignore  .luarc.json  404.qmd  _publish.yml  _quarto.yml  index.qmd  pyproject.toml  readme.md  styles.css
.github/workflows/: publish.yml
_site/: about.html  index.html  search.json
assets/: custom.css  custom.scss  publications.bib
assets/cover/: cover.py  fun.py
assets/cv/: cv_template.tex
assets/favicon_io/: about.txt
assets/theme/: dark.css  light.css
blog/: .gitignore  _quarto.yml  index.qmd
blog/assets/: algorithms.bib  candidate_support_chapter_references.bib
blog/posts/advent_of_code/: advent_of_code.qmd
blog/posts/big_o_and_semantic_associations/: index.qmd
blog/posts/citing/: index.qmd
blog/posts/data_engineering/: index.qmd
blog/posts/data_engineering/assets/: references.bib
blog/posts/halloween_2022/: halloween_2022.knit.md  halloween_2022.qmd
blog/posts/nba_2023/: index.qmd  pyproject.toml
blog/posts/nba_2023/nba_2023/: get_historical_data.py
blog/posts/pitch_movement_consistency/: index.qmd
blog/posts/quarto-website-creation/: website_index.qmd
blog/posts/quarto_basics/: quarto_basics_index.qmd
blog/posts/reading_polls/: reading_polls_index.qmd
blog/posts/style_guide/: collaboration_style_guide.qmd
cv/: dcr_cv.qmd  res.cls
research/: index.qmd
teaching/: index.qmd
teaching/psci-2075/sp23/: 01_setup.qmd  02_anatomy.qmd  03_run_code.qmd  04_quarto.qmd  05_r_syntax_basics.qmd  06_loading_data.qmd  _quarto.yml  handout.qmd  index.qmd  readme.md
(+5 files in other folders)
