[tool.poetry]
name = "website"
version = "0.1.0"
description = "DCR's personal website"
authors = ["Damon C. Roberts <damon.charles.roberts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.0"
samila = "^1.0"
pybaseball = "^2.2.7"
jupyter = "^1.0.0"
polars = "^0.19.6"
plotly = "^5.17.0"
statsmodels = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
